--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>traxcom</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body id="app">
+    <header>
+    	<img src="./img/header.png" alt="">
+    </header>
     <script src="/dist/build.js"></script>
   </body>
 </html>
