--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
     	</div>
     </section>
     <section>
-    	<h2>video</h2>
+    	<div class="container">
+         <div class="row">
+             <div class="col-md-12">
+                 <iframe width="854" height="480" src="https://www.youtube.com/embed/DHdkRvEzW84" frameborder="0" allowfullscreen></iframe>
+             </div>
+         </div>   
+        </div>
     </section>
     <footer style="padding-top: 23px;">
     	<div class="container-fluid">
