correccin section video

--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
     		</div>
     	</div>
     </section>
-    <section>
+    <section id="video">
     	<div class="container">
          <div class="row">
+            <div class="col-md-12">
+                <h3 class="text-center">MIRA NUESTRO VIDEO</h3>
+            </div>
              <div class="col-md-12">
                  <iframe width="854" height="480" src="https://www.youtube.com/embed/DHdkRvEzW84" frameborder="0" allowfullscreen></iframe>
              </div>
